# gravitic-duel

./: .gitignore  DEV_MODES.md  FILES.md  LAYOUT.md  PLAN.md  README.md  SPEC.md  constants.py  controls.py  dev_modes.py  entities.py  main.py  physics.py  pyproject.toml  settings.py  sprites.py  ui.py  utils.py
.cursor/: layout.mdc  python.mdc
assets/: assets.md
stupid_space_game/: celestials.py  constants.py  controls.py  graphics.py  main.py  missile_logic.py  physics.py  rockets.py  ui.py  world.py
stupid_space_game/tests/: test10_final.py  test11_healthbars.py  test1_draw_planet.py  test2_draw_scaled.py  test3_draw_rocket.py  test4_draw_solar_system.py  test5_star_halo.py  test7_draw-right-triangle.py  test8_draw_better_traingle.py  test9_shooting.py
