[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stupid-space-game"
version = "0.1.0"
description = "A 2D multiplayer space combat arena game"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
stupid-space-game = "stupid_space_game.main:main"

[tool.hatch.build.targets.wheel]
packages = ["stupid_space_game"] 