[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triangles-in-space"
version = "1.0.0"
description = "A 2D multiplayer space combat arena game where you need to know your right triangles to win"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Dmitry Borzov", email = "d@borzov.ca" }
]
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
triangles-in-space = "stupid_space_game.main:main"

[tool.hatch.build.targets.wheel]
packages = ["stupid_space_game"] 